reverted the cart class to not yet include session based or guest checkouts/did improvemetns on the header.php/revised the design on payment.php checkout and fixed the non visible radio buttons/

--- a/styles/product.css
+++ b/styles/product.css
@@ -276,7 +276,7 @@
 }
 
 .form-check-label {
-  margin-left: 1rem;
+  margin-left: none;
 }
 
 .fixed-card-height {
